[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/gui/quit_dialog.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 0.509804 )

[node name="QuitDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -9.0
margin_top = -14.0
margin_right = 9.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 213.0
margin_bottom = 69.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 206.0
margin_bottom = 14.0
text = "Really quit the game?"
align = 1

[node name="BackButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 206.0
margin_bottom = 38.0
text = "No, go back!"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 206.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 101.0
margin_bottom = 20.0
text = "Yes, quit now!"

[node name="SaveButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 105.0
margin_right = 206.0
margin_bottom = 20.0
text = "Save and quit!"

[connection signal="pressed" from="PanelContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
